fix overflow bug for shelf scene

--- a/src/components/shelfSystem/shelfScene/shelfSceneStyles.css
+++ b/src/components/shelfSystem/shelfScene/shelfSceneStyles.css
@@ -5,6 +5,10 @@
   font-size: 2rem;
 }
 
+.shelfSceneContainer {
+  overflow: hidden;
+}
+
 .bgImage {
   position: fixed;
   overflow: hidden;
